[tool.poetry]
name = "vg-stats"
version = "0.1.0"
description = ""
authors = ["Oqla Alrefai <2015978054@ses.yu.edu.jo>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.2.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
